try to build by Jenkins

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daily (91.0a1+) UNRELEASED; urgency=medium
+
+  * Jenkinsfile added
+
+ -- CyberVitexus <vitex@exiv.jinonice.czf>  Fri, 25 Jun 2021 23:33:01 +0200
+
 daily (80.0a1) experimental; urgency=medium
 
 
