--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-daily (97.0a1+) UNRELEASED; urgency=medium
+daily (102.0a1+) UNRELEASED; urgency=medium
 
   [ CyberVitexus ]
   * Jenkinsfile added
 
   [ vitex ]
   * Current build
+  * Print version as jenkins build test
 
- -- vitex <info@vitexsoftware.cz>  Mon, 13 Dec 2021 20:01:39 +0100
+ -- vitex <info@vitexsoftware.cz>  Sat, 28 May 2022 21:35:43 +0200
 
 daily (80.0a1) experimental; urgency=medium
 
