Package rename to thunderbird-daily

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-daily (102.0a1+) UNRELEASED; urgency=medium
+thunderbird-daily (99.0a1+) UNRELEASED; urgency=medium
 
   [ CyberVitexus ]
   * Jenkinsfile added
