Package Rename phase II

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,7 @@ thunderbird-daily (99.0a1+) UNRELEASED; urgency=medium
 
  -- vitex <info@vitexsoftware.cz>  Sat, 28 May 2022 21:35:43 +0200
 
-daily (80.0a1) experimental; urgency=medium
+thunderbird-daily (80.0a1) experimental; urgency=medium
 
 
 
